# dsa110-nsfrb

./: .gitignore  DSA110_Station_Coordinates.csv  README.md  casa310nsfrb_env.yml  casa38nsfrb_env.yml  inject_log.txt  metadata.txt  ms_vis_extraction.py  process_log.txt  requirements-ci.txt  requirements.txt  setup.py  tmp.txt  version.py
T4/: README.md  vis_collector.py
cand_cutter/: README.md  candcutting.py  kill_cand_cutter  run.py  run_cand_cutter
candidates/: 240220aaacNSFRB.npy  240220aaadNSFRB.npy  240220aaaeNSFRB.npy  240220aaafNSFRB.npy  240220aaagNSFRB.npy  240220aaaiNSFRB.npy  240220aaalNSFRB.npy  240220aaanNSFRB.npy  NSFRB240220aaaa.npy  NSFRB240220aaab.npy  NSFRB240220aaac.npy  NSFRB240220aaad.npy  NSFRB240220aaae.npy  NSFRB240220aaaf.npy  NSFRB240220aaag.npy  NSFRB240220aaah.npy  candidate_subimage_ID0000_0_0.npy  candidate_subimage_ID0000_0_28.npy  candidate_subimage_ID0000_10_0.npy  candidate_subimage_ID0000_10_16.npy  candidate_subimage_ID0000_10_2.npy  candidate_subimage_ID0000_10_3.npy  candidate_subimage_ID0000_10_4.npy  (+151 more)
nsfrb/: noise.py  (+22 more)
src/: .pipestatus.txt  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TESTLOG.txt  cmake_install.cmake  empty.npy  empty_sent.npy  kill_server  run_server  run_server.c  run_server.sh  server_helper.h  server_log.txt  simpletestclient.c  simpletestclient.py  simulated1test.npy  simulated1test_rev.npy  simulated1test_rev_v2.npy  socket_server_test_V2.c  socket_server_test_V3.c  socket_subclient_test_V3.c  startprocess_V3.py  subclient.h
src/server_tests/: test_server.py  test_server.sh  test_server_2.sh
(+367 files in other folders)
